Add existing file

--- a/COMP4537.html
+++ b/COMP4537.html
@@ -35,7 +35,7 @@
             <div class ="list">
                 <h2>Comp 4537</h2>
                 <ul>
-                    <li><a href="C://Users/sjind/Desktop/Comp Arch/lab1/quiz.html"> Lab 1 Hard Coded quiz</a></li>
+                    <li><a href="/quiz.html"> Lab 1 Hard Coded quiz</a></li>
                 <li>Lab 2...</li>
                 <li>Lab 3...</li>
                 </ul>
