--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class ="list">
                 <h2>List of my courses:</h2>
                 <ul>
-                <li><a href="C://Users/sjind/Desktop/Comp Arch/lab1/COMP4537.html"> COMP 4537</a></li>
+                <li><a href="/COMP4537.html"> COMP 4537</a></li>
                 <li>COMP 3455</li>
                 <li>COMP 3455</li>
                 <li>COMP 3455</li>
