--- a/COMP4537.html
+++ b/COMP4537.html
@@ -45,7 +45,7 @@
 
               <script type="text/javascript">
                     document.getElementById("myButton").onclick = function () {
-                        location.href = "C://Users/sjind/Desktop/Comp Arch/lab1/index.html";
+                        location.href = "/index.html";
                     };
               </script>
 
